--- a/css/skelaton-dynamic.css
+++ b/css/skelaton-dynamic.css
@@ -1,4 +1,4 @@
-.container { padding:0; margin-right: auto; margin-left: auto; }
+.container { padding:0; margin:0 auto; }
 .row {float: left;} 
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 { float: left; }
 .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 { float: left; }
@@ -40,7 +40,6 @@
 .col-lg-2 {width:160.000000032px;}
 .col-lg-1 {width:79.999999968px;}
 }
-
 
 
 @media (min-width: 750px ) and (max-width:992px ) { /*768 the exact*/
