--- a/style.css
+++ b/style.css
@@ -1,26 +1,17 @@
 /**
-* Theme Name: 3CMS
-* Theme URI: http://http://inspiration-inspection.ml/3CMS#
-* Description: 3CMS# is a versatile and easy to customize WordPress theme, instantly giving a professional look to your online presence. Designed with visitor engagement in mind, it allows anyone to create a beautiful, fast and mobile friendly website compatible with all browsers and devices. Customizr works fine with major WordPress plugins like WooCommerce, bbPress, JetPack and many others. Top rated by hundreds and with an extremely active community of users and developers, the Customizr theme is a safe and reliable design option to publish your WordPress content.
+* Theme Name: 3DaVinci
+* Theme URI: http://inspiration-inspection.ml/3DaVinci 
+* Description: 3DaVinci  is a versatile and easy to customize WordPress theme, instantly giving a professional look to your online presence. Designed with visitor engagement in mind, it allows anyone to create a beautiful, fast and mobile friendly website compatible with all browsers and devices. works fine with major WordPress plugins like WooCommerce, bbPress, JetPack and many others. Top rated by hundreds and with an extremely active community of users and developers, the 3DaVinci theme is a safe and reliable design option to publish your WordPress content.
 * Version: 1.0.0
 * Author: Hesham Hussain [adam adam]
-* Author URI: http://inspiration-inspection.ml/heshamhussaincurlicumvital
+* Author URI: http://inspiration-inspection.ml/adam-curriculum-vitae/
 * Tags: gray, white, light, blue, red, yellow, green, purple, orange, black, one-column, two-columns, three-columns, left-sidebar, right-sidebar, fluid-layout, responsive-layout, custom-menu, custom-colors, featured-images, full-width-template, theme-options, threaded-comments, translation-ready, sticky-post, post-formats, rtl-language-support, editor-style
-* Text Domain: customizr
+* 
 * Copyright: (c) 2015 Hesham (adam), Giza, Egypt
 * License: GNU General Public License v2.0 or later
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
-
-/**
-* The styleheets of Customizr are located in inc/assets/css. Each skin has its own stylesheet : blue.css, green.css, ...
-* The current stylesheet is loaded after the main skin stylesheet.
-*
-* IMPORTANT : If you write your CSS code below, it will be deleted when you'll update the theme.
-* If you want to make quick style test / changes, consider using the Custom CSS section in appearance > customize > advanced options > Custom CSS, it will persist on update since it is saved in your database.
-* To make important CSS customizations, you'll want to use a child theme and add your css code in the style.css file of it.
-*/
 html {
   color:white;
   -webkit-text-size-adjust: 100%;
@@ -34,17 +25,17 @@ ul,li {list-style: none;padding: 0;margin: 0;}
 
 
 .gap {clear:both;}
-.container {margin: 0 auto;padding:0; } 
+.container { } 
 .row {background-color: #222;}
 
 .site-title a:visited {color: #fff;}
 .site-title a {
-	font-size: 30px;text-decoration: none;font-weight: bold;
+	font-size: 25px;text-decoration: none;font-weight: bold;
   padding: 0 80px;
   text-shadow: 0px 1.1px 0 #444, 0px 1.3px 0 #444,0px 1.5px 0 #444,0px 1.7px 0 #444,0px 2.1px 0 #444, 0px 2.3px 0 #444,0px 2.5px 0 #444,0px 2.7px 0 #444,0px 3.1px 0 #444, 0px 3.3px 0 #444,0px 3.5px 0 #444,0px 3.7px 0 #444,0px 4.1px 0 #444, 0px 4.3px 0 #444,0px 4.5px 0 #444,0px 4.7px 0 #444, 0 5px 0 #444,0 4px 0 #444, 0 3px 0 #444, 0 2px 0 #444, 0 1px 0 #444;
 }
 .site-title p a {
-	font-size: 40px;text-decoration: none;font-weight: bold;
+	font-size: 30px;text-decoration: none;font-weight: bold;
   padding: 10px 20px;margin: 0 10px;
 	border-radius:5px;
 	border:solid 1px #ccc;
@@ -55,8 +46,14 @@ ul,li {list-style: none;padding: 0;margin: 0;}
 }
 
 @media (max-width: 700px){
-.site-title a {font-size: 20px;text-decoration: none;padding: 0 20px;font-weight: bold;}
-.site-title p a {font-size: 20px;text-decoration: none;padding: 0 20px;font-weight: bold;}	
+.site-title a {font-size: 20px;padding: 0 20px;}
+.site-title p a {font-size: 25px;padding: 5px 10px;}	
+
+}
+
+@media (max-width: 500px){
+.site-title a {font-size: 15px;padding: 0 20px;}
+.site-title p a {font-size: 15px;padding: 5px 10px;}	
 
 }
 .banner {position: relative;}
@@ -72,8 +69,9 @@ ul,li {list-style: none;padding: 0;margin: 0;}
 
 img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
 /*navbar Primary */
-.nav{margin: 0px 0 0 0;}
-.menu {
+
+/* .nav div was .menu */
+.nav div {
 	height:50px;width:90%;
 	padding: 0px;margin: 0px auto ;
 	border-radius:3px 3px 30px 30px;border:solid 1px #ccc;
@@ -81,28 +79,28 @@ img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
 
 	}
 
-.menu > ul {
+.nav div > ul {
 	background-color: #444;
 	border-radius:3px 3px 30px 30px;
 	height:50px;
 	padding: 0 30px;
 }
-.menu a:link ,.menu a:visited {
+.nav div a:link ,.nav div a:visited {
 	color: #fff;
 }
-.menu a:hover {	color: #aaa;}
+.nav div a:hover {	color: #aaa;}
 
-.menu a {
+.nav div a {
 	background-color: #444;
 	padding: 15px 15px;	
 }
-.menu > ul > li {
+.nav div > ul > li {
 	height:50px;
     float: left;
 	padding: 0px 0px;margin:15px 0;
 	text-shadow: 0px 7px 0 #333, 0px 6px 0 #333, 0 5px 0 #333,0 4px 0 #333, 0 3px 0 #333, 0 2px 0 #333, 0 1px 0 #333;
 }
-.menu > ul > li:nth-child(n+5)  {
+.nav div > ul > li:nth-child(n+4)  {
     border-radius:3px 3px 5px 30px;border:solid 1px #ccc;
 	box-shadow: 0px 6px 0px #444,0px 20px 15px #111;
 	background-color: #444;
@@ -111,20 +109,20 @@ img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
 	text-shadow: 0px 7px 0 #333, 0px 6px 0 #333, 0 5px 0 #333,0 4px 0 #333, 0 3px 0 #333, 0 2px 0 #333, 0 1px 0 #333;
 
 }
-.menu > ul > li:nth-child(n+5) >a {
+.nav div > ul > li:nth-child(n+4) >a {
    
 	background-color: #444;
    
 	padding: 0px 15px;
 
 }
-.menu > ul > li li {
+.nav div > ul > li li {
 	padding: 0px 0px;margin:50px 0;
 	text-shadow: 0px 7px 0 #333, 0px 6px 0 #333, 0 5px 0 #333,0 4px 0 #333, 0 3px 0 #333, 0 2px 0 #333, 0 1px 0 #333;
 
 }
 
-.menu ul > li > ul {
+.nav div ul > li > ul {
 	position: absolute;
 	left:-9999px;
 	background-color: #444;
@@ -132,13 +130,13 @@ img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
 	box-shadow: 0px 6px 0px #444,0px 20px 15px #111;
   margin:15px 0 ;padding: 0px 0px;
 }
-.menu > ul > li:hover > ul {left:auto;}
-.menu > ul > li > ul > li > ul {position:absolute;left:-9999px;}
+.nav div > ul > li:hover > ul {left:auto;}
+.nav div > ul > li > ul > li > ul {position:absolute;left:-9999px;}
 
-.menu > ul > li > ul > li:hover { }
-.menu > ul > li > ul > li:hover > a {padding: 10px 200px 10px 20px; }
-.menu > ul > li > ul > li:hover > ul {left:130px;top:auto;margin-top:-65px; }
-.menu > ul > li > ul > li > ul > li {}
+.nav div > ul > li > ul > li:hover { }
+.nav div > ul > li > ul > li:hover > a {padding: 10px 200px 10px 20px; }
+.nav div > ul > li > ul > li:hover > ul {left:130px;top:auto;margin-top:-65px; }
+.nav div > ul > li > ul > li > ul > li {}
 
 
 .page .rect {
@@ -189,3 +187,9 @@ footer img {width: 100%;height: 100px; }
 .rect .push_button{	border-top: solid 5px #fff;}
 .rect .push_button a:hover {color:#ccc;}
 
+.oops h1 {
+	color:#D94E3B;
+	padding: 10px 20px;margin:10px 10px;
+	box-shadow:2px 2px 4px #111;
+	text-shadow:2px 2px 4px #111;
+}
