20151120 branch adam first test

--- a/css/elements.css
+++ b/css/elements.css
@@ -435,3 +435,12 @@ table th[class*="col-"] {
     border-bottom: 0;
   }
 }
+
+/* navbar fixed */
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+} 
