--- a/style.css
+++ b/style.css
@@ -12,15 +12,16 @@
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
-html {
+/*html {
   color:white;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-}
-body {background-color: #111;padding:0;margin:0; }
-a:link {color: #fff;}
+}*/
+body {/*background-color: #111;*/
+	padding:0;margin:0; }
+/*a:link {color: #fff;}
 a:visited {color: #aaa;}
-
+a:hover {color: #999;}*/
 ul,li {list-style: none;padding: 0;margin: 0;}
 
 
@@ -193,3 +194,5 @@ footer img {width: 100%;height: 100px; }
 	box-shadow:2px 2px 4px #111;
 	text-shadow:2px 2px 4px #111;
 }
+
+.navbar-fixed-top{top:0;}
