--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {/*background-color: #111;*/
 /*a:link {color: #fff;}
 a:visited {color: #aaa;}
 a:hover {color: #999;}*/
+
+
 ul,li {list-style: none;padding: 0;margin: 0;}
 
 
@@ -69,6 +71,9 @@ ul,li {list-style: none;padding: 0;margin: 0;}
 	}
 
 img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
+img#btn { width:12%;margin:10px 5%;position:absolute;left:0;}
+img#logo {width:12%;float:right;margin-right:30px;margin-top: -10px;}
+
 /*navbar Primary */
 
 /* .nav div was .menu */
@@ -146,10 +151,28 @@ img#shadow { width:90%;margin:10px 5%;position:relative;z-index: -10;}
 	border-bottom:1px solid #fff;border-radius: 15px;
 }
 
+.page div.archive{font-size: 16px;padding-left: 20px;color: #fff;text-shadow: 0px 6px 4px #000;}
+
+.postedby {width:92%;box-shadow:inset 0px -1px 1px #777;display: inline-block;background-color: #000;padding: 0 2%;margin: 10px 2%;}
+.postedby a {margin: 10px;padding:0;float: left;}
+.postedby ul {margin: 0;padding:0;}
+
 .sidebar aside {margin:0 5px;padding: 10px 10px;  background-color: #222;box-shadow: 0px 4px 8px #000;}
 .sidebar li.widget {border-bottom:5px solid #fff;}
 
 
+.footer1 {float: left;width:96%;margin:5px 2%;padding: 0px 0px;background-color: #222;box-shadow: 0px 4px 8px #000;}
+.footer1 li.widget {float: left;padding: 30px;}
+
+
+.footer2 {float: left;width:96%;margin:5px 2%;padding: 0px 0px;background-color: #222;box-shadow: 0px 4px 8px #000;}
+.footer2 li.widget {float: left;padding:30px;}
+.footer2 li.widget:first-child { clear: left;}
+.footer2 li.widget:last-child { clear: right;}
+
+.footer3 {float: left;width:96%;margin:5px 2%;padding: 0px 0px;background-color: #222;box-shadow: 0px 4px 8px #000;}
+.footer3 li.widget {float: left;padding: 30px;}
+.footer3 li.widget:first-child {clear:left;}
 
 @media (max-width: 1200px){
 
@@ -196,3 +219,54 @@ footer img {width: 100%;height: 100px; }
 }
 
 .navbar-fixed-top{top:0;}
+
+/* out */
+/* inline-block = float:left + clear both*/
+/*
+.floating-box {
+    float: left;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
+    border: 3px solid #73AD21;
+}
+
+.after-box {
+    clear: left;
+}
+*/
+ /* equal == */
+ /*
+.floating-box {
+    display: inline-block;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
+    border: 3px solid #73AD21;
+}
+*/
+/* out */
+/* inline-block = float:left + clear both*/
+/*
+.floating-box {
+    float: left;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
+    border: 3px solid #73AD21;
+}
+
+.after-box {
+    clear: left;
+}
+*/
+ /* equal == */
+ /*
+.floating-box {
+    display: inline-block;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
+    border: 3px solid #73AD21;
+}
+*/
