--- a/css/elements.css
+++ b/css/elements.css
@@ -438,6 +438,16 @@ table th[class*="col-"] {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .table-responsive {
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+  }
+}
+
 /* navbar fixed */
 .navbar-fixed-top,
 .navbar-fixed-bottom {
